<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mobile Triage System</string>
    <string name="triage_mode">Triage Modus</string>
	<string name="salvage_mode">Bergungs Modus</string>
    <string name="therapy_mode">Behandlungs Modus</string>
    <string name="walk">Gehfähigkeit</string>
    <string name="respiration">Respiration</string>
    <string name="perfusion">Perfusion</string>
    <string name="mental">Mentaler Status</string>
    <string name="yes">Ja</string>
    <string name="no">Nein</string>
    <string name="stable">Stabil</string>
    <string name="critical">Kritisch</string>
    <string name="error">FEHLER</string>
    <string name="save">Speichern</string>
    <string name="change">Ändern</string>
    <string name="error_category_missing">Der Patient wurde noch nicht eingestuft!</string>
    <string name="salvageinfo">Bergeinformation</string>
    <string name="question_restart">Wollen Sie die gerade eingegebenen Daten wirklich zurücksetzen?</string>
    <string name="insert_info">Info einfügen</string>
    <string name="ok">OK</string>
    <string name="add">Hinzufügen</string>
    <string name="no_info">keine Information</string>
    <string name="scan_new_tag">Triage-Tag einscannen</string>
    <string name="change_mode">Modus ändern</string>
    <string name="area_1">Behandlungsplatz I</string>
    <string name="area_2">Behandlungsplatz II</string>
    <string name="area_3">Behandlungsplatz III</string>
    <string name="area_4">Behandlungsplatz IV</string>
    <string name="salvagelist">Bergeliste</string>
    <string name="salvagemap">Bergekarte</string>
    <string name="scan_tag">Tag Scannen</string>
    <string name="select_mode">Modus auswählen</string>
    <string name="create_patient">Patient erstellen</string>
    <string name="edit_patient">Patienten bearbeiten</string>
    <string name="skip">Überspringen</string>
    <string name="info_saved">Die Daten des Patienten wurden gespeichert!</string>
    <string name="question_gotoareaormode">Modus oder Behandlungsplatz wechseln?</string>
    <string name="question_gotomode">Modus wechseln?</string>
    <string name="nothing">Nichts</string>
    <string name="area">Behandlungsplatz</string>
    <string name="mode">Modus</string>
    <string name="walk_criteria">Ist der Patient gehfähig?</string>
    <string name="respiration1_criteria">Hat der Patient eine spontane Atmung?</string>
    <string name="respiration2_criteria">Hat der Patient eine kleinere Atemfrequenz als 30?</string>
    <string name="perfusion_criteria">Hat der Patient eine Puls und eine Rekap-Zeit von weniger als 2 Sekunden?</string>
    <string name="mental_criteria">Kann der Patient einfachen Befehlen folgen?</string>
    <string name="urgency">Dringlichkeit</string>
    <string name="bloodpressure">Blutdruck</string>
    <string name="s_o2">O2-Sättigung</string>
    <string name="pulse">Puls</string>
    <string name="activate_gps">Damit die Patienten-Ortung genau ist, muss GPS aktiviert sein\nGPS jetzt aktivieren?</string>
    <string name="i">i</string>
    <string name="error_gps">Es gabe einen Fehler beim Speichern der GPS-Koordinaten</string>
    <string name="vital_parameter">Untersuchung</string>
    <string name="diagnosis">Diagnose</string>
    <string name="personal_data">Stammdaten</string>
    <string name="therapy">Behandlung</string>
    <string name="record_death">Tod feststellen</string>
    <string name="reason_death">Todesursache</string>
    <string name="gender">Geschlecht</string>
    <string name="age">Alter</string>
    <string name="f">W</string>
    <string name="m">M</string>
    <string name="child">Kind</string>
    <string name="adult">Erw</string>
    <string name="error_wrong_area">Der gescannte Patient ist nicht auf den gewählten Behandlungsplatz!</string>
    <string name="firstname">Vorname</string>
    <string name="lastname">Nachname</string>
    <string name="street">Straße</string>
    <string name="city">Ort</string>
    <string name="birthdate">Geb.datum</string>
    <string name="zip">PLZ</string>
    <string name="insurance_nr">SVNr</string>
    <string name="insurance">Versicherung</string>
    <string name="add_diagnosis">Diagnose hinzufügen</string>
    <string name="error_no_reason">Sie müssen zuerst eine Todesursache angeben, bevor der Tod festgestellt werden kann!</string>
    <string name="front_body">Vorderkörper</string>
    <string name="back_body">Hinterkörper</string>
    <string name="change_patient">Wollen Sie den Patienten wechseln?</string>
    <string name="error_save_data">Beim Speichern der Daten ist ein Fehler aufgetreten!</string>
    <string name="error_load_data">Beim Laden der Daten ist ein Fehler aufgetreten!</string>
    <string name="error_not_on_salvagelist">Der gewählte Patient befindet sich nicht auf der Berge-Liste!</string>
    <string name="diagnosis_added">wurde zur Diagnose hinzugefügt</string>
    <string name="scan_qr">QR-Code scannen</string>
    <string name="error_scan_tag">Beim Scannen des Tags ist ein Fehler aufgetreten!</string>
    <string name="distance">Entfernung</string>
    <string name="medication">Medikament</string>
    <string name="wound">Wunde</string>
    <string name="cpr">CPR</string>
    <string name="no_support">keine Maßnahmen</string>
    <string name="ready_transport">Transportbereit</string>
    <string name="sure_ready_transport">Sind Sie sicher, dass der Patient fertig zum Abtransport ist?</string>
    <string name="patient_already_registered">Der gewählte Patient wurde bereits registriert!</string>
    <string name="patient_put">Patient ablegen</string>
    <string name="send_to_hospital">ins Krankenhaus einweisen</string>
    <string name="go_for_doctor_tomorrow">muss morgen Arzt aufsuchen</string>
    <string name="let_go">Entlassen</string>
    <string name="psychologist">sollte in psychologische Betreuung</string>
    <string name="login">Anmelden</string>
    <string name="logout">Ausloggen</string>
    <string name="scan_tag_error">Fehler beim Scannen des Tags!</string>
</resources>