<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayoutIm"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical" >
    
	    <TextView
	            android:id="@+id/textViewTherapy"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content"
	            android:text="@string/therapy_mode"
	            android:textAppearance="?android:attr/textAppearanceLarge" />
	    
	    <TextView
            android:id="@+id/textViewTherapyMin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/therapy"
            android:textAppearance="?android:attr/textAppearanceLarge" />

	    <TextView
	        android:id="@+id/textView1"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:text=""
	        android:textAppearance="?android:attr/textAppearanceMedium" />

	    <Button
	        android:id="@+id/buttonHospital"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/send_to_hospital" />

	    <Button
	        android:id="@+id/buttonDoctor"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/go_for_doctor_tomorrow" />
	    
	    <Button
	        android:id="@+id/buttonPsychologist"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:text="@string/psychologist" />

	    <Button
	        android:id="@+id/buttonLetGo"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:onClick="setTherapy"
	        android:text="@string/let_go" />
	    
    </LinearLayout>
    
</GridLayout>
