<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="match_parent"
	android:layout_height="match_parent"
	android:columnCount="1" >

    <FrameLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonArea1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:text="@string/area_1"
                android:textColor="@android:color/holo_red_light" />

            <Button
                android:id="@+id/buttonArea2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:text="@string/area_2"
                android:textColor="@android:color/holo_orange_light" />

            <Button
                android:id="@+id/buttonArea3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:text="@string/area_3"
                android:textColor="@android:color/holo_green_dark" />

            <Button
                android:id="@+id/buttonArea4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:text="@string/area_4" />

        </LinearLayout>
        
    </FrameLayout>

    <TextView
        android:id="@+id/textViewTherapyArea1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/therapy_mode"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
</GridLayout>