<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >
    
    <TextView
        android:id="@+id/textViewTherapy2"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/therapy_mode"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <FrameLayout
        android:layout_width="230dp"
        android:layout_height="wrap_content"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <Button
                android:id="@+id/buttonPersonalData"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:text="@string/personal_data"
                android:onClick="gotoPersonalData" />

            <Button
                android:id="@+id/buttonVitalParameter"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:text="@string/vital_parameter"
                android:onClick="gotoVitalParameter" />

            <Button
                android:id="@+id/buttonDiagnosis"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:text="@string/diagnosis"
                android:onClick="gotoDiagnosis" />
            
            <Button
                android:id="@+id/buttonTherapy"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="55dp"
                android:text="@string/therapy"
                android:onClick="gotoTherapy" />

        </LinearLayout>
        
    </FrameLayout>

</GridLayout>