<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical" >

        <TextView
            android:id="@+id/textViewSalvageMain1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvage_mode"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:id="@+id/textViewSalvageMain2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/salvageinfo"
            android:textAppearance="?android:attr/textAppearanceMedium" />

        <TextView
            android:id="@+id/textViewSalvageSingleSalvageText"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/no_info"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </LinearLayout>
    
    <Button
        android:id="@+id/btnScanPatient"
        android:layout_column="0"
        android:layout_gravity="center_horizontal|bottom"
        android:layout_row="0"
        android:onClick="scanTag"
        android:text="@string/scan_tag" />

</GridLayout>