<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >
    
    <fragment xmlns:android="http://schemas.android.com/apk/res/android"
          android:id="@+id/salvage_map_map"
          android:layout_width="match_parent"
          android:layout_height="match_parent"
          android:name="com.google.android.gms.maps.MapFragment"/>

    <TextView
        android:id="@+id/textViewSalvageMap1"
        android:layout_gravity="left|top"
        android:text="@string/salvage_mode"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <Button
		android:id="@+id/restart"
		android:layout_gravity="left|bottom"
		android:text="@string/salvagelist" />

    <Button
		android:id="@+id/save"
		android:layout_column="0"
		android:layout_gravity="right|bottom"
		android:layout_row="0"
		android:text="@string/scan_tag" />

</GridLayout>