<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >

    <TextView
        android:id="@+id/textViewTriageSelection1"
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:text="@string/triage_mode"
        android:textAppearance="?android:attr/textAppearanceLarge" />
    
    <FrameLayout
        android:layout_width="200dp"
        android:layout_height="150dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0" >

        <GridLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:columnCount="1" >

            <Button
                android:id="@+id/buttonCreatePatient"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|top"
                android:layout_row="0"
                android:text="@string/create_patient" />

            <Button
                android:id="@+id/buttonEditPatient"
                android:layout_width="match_parent"
                android:layout_column="0"
                android:layout_gravity="center_horizontal|bottom"
                android:layout_row="0"
                android:text="@string/edit_patient" />

        </GridLayout>

    </FrameLayout>

</GridLayout>