<?xml version="1.0" encoding="utf-8"?>
<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/GridLayoutIm"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:columnCount="1" >
    
    <LinearLayout
        android:layout_column="0"
        android:layout_gravity="left|top"
        android:layout_row="0"
        android:orientation="vertical" >

	    <TableLayout
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content" >
	
	        <TableRow
	            android:id="@+id/tableRow1"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textViewTherapyDeath"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/record_death"
	                android:textAppearance="?android:attr/textAppearanceLarge" />
	        </TableRow>
	
	        <TableRow
	            android:id="@+id/tableRow2"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >
	
	            <TextView
	                android:id="@+id/textView1"
	                android:layout_width="wrap_content"
	                android:layout_height="wrap_content"
	                android:text="@string/reason_death"
	                android:textAppearance="?android:attr/textAppearanceMedium" />

	            <EditText
	                android:id="@+id/editText1"
	                android:layout_width="150dp"
	                android:layout_height="wrap_content"
	                android:inputType="textPersonName" >

	                <requestFocus />
	            </EditText>

	        </TableRow>

	        <TableRow
	            android:id="@+id/tableRow3"
	            android:layout_width="wrap_content"
	            android:layout_height="wrap_content" >

	        </TableRow>

	    </TableLayout>
	    
	</LinearLayout>

    <Button
        android:id="@+id/saveTherapyIm"
        android:layout_column="0"
        android:layout_gravity="right|bottom"
        android:layout_row="0"
        android:onClick="save"
        android:text="@string/save" />

    <Button
        android:id="@+id/buttonRecordDeath"
        android:layout_width="185dp"
        android:layout_height="84dp"
        android:layout_column="0"
        android:layout_gravity="center"
        android:layout_row="0"
        android:text="@string/record_death" />

</GridLayout>